[gd_scene load_steps=11 format=2]

[ext_resource path="res://Texturen/PauseMenuBG.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu/MenuScripts/PausenMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -92.6757, -106.92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HBoxContainer/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/BG:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -92.6757, -106.92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.277392, 0.277392 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.635294 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HBoxContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.277392 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Exit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -92.6757, -106.92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.277392 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.635294 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HBoxContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.277392, 0.277392 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PausenMen√º" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="BG" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -92.6757, -106.92 )
scale = Vector2( 10.2934, 13.4863 )
texture = ExtResource( 1 )
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 435.0
margin_right = 589.0
margin_bottom = 600.0
alignment = 1

[node name="Weiter" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 230.0
margin_right = 154.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 1 )
text = "Weiter"

[node name="Options" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 266.0
margin_right = 154.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 302.0
margin_right = 154.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="Spiel_Beenden" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
pause_mode = 2
margin_top = 338.0
margin_right = 154.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 4 )
text = "Spiel Beenden"

[node name="Anim" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Beginn = SubResource( 5 )
anims/Enter = SubResource( 6 )
anims/Exit = SubResource( 7 )
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Weiter" to="." method="_on_Weiter_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Spiel_Beenden" to="." method="_on_Spiel_Beenden_pressed"]
